# liom_local_planner

./: CMakeLists.txt  LICENSE  README.md  lp_plugin.xml  package.xml
config/: test-stage.rviz  test.rviz
config/map/: map.pgm  map.yaml
config/move_base/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  liom_planner.yaml  planner.yaml
config/stage/: maze_carlike.world
config/stage/robots/: carlike_robot.inc
include/liom_local_planner/: coarse_path_planner.h  environment.h  lightweight_nlp_problem.h  liom_local_planner.h  liom_local_planner_ros.h  optimizer_interface.h  planner_config.h  time.h  vehicle_model.h
include/liom_local_planner/math/: aabox2d.h  box2d.h  line_segment2d.h  math_utils.h  polygon2d.h  pose.h  vec2d.h
include/liom_local_planner/visualization/: color.h  plot.h
launch/: demo_stage.launch  demo_test.launch
src/: coarse_path_planner.cpp  environment.cpp  lightweight_nlp_problem.cpp  liom_local_planner.cpp  liom_local_planner_ros.cpp  liom_test_node.cpp
src/math/: aabox2d.cpp  box2d.cpp  line_segment2d.cpp  math_utils.cpp  polygon2d.cpp  vec2d.cpp
src/visualization/: color.cpp  plot.cpp
