<?xml version="1.0"?>
<package format="2">
  <name>liom_local_planner</name>
  <version>0.0.1</version>
  <description>The liom_local_planner package</description>
  <author>Bai Li</author>
  <author>Yakun Ouyang</author>
  <maintainer email="yakun@hnu.edu.cn">Yakun Ouyang</maintainer>
  <license>LGPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>coinor-libipopt-dev</depend>
  <!--TODO: add `libadolc-dev` to rosdistro: https://raw.githubusercontent.com/ros/rosdistro/master/rosdep/base.yaml -->
  <depend>libadolc-dev</depend>
  <depend>ompl</depend>
  <export>
    <nav_core plugin="${prefix}/lp_plugin.xml"/>
  </export>
</package>
